Launcher correction